load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "processor",
    srcs = ["processor.go"],
    importpath = "github.com/palak92/clickhouse/pkg/processor",
    visibility = ["//visibility:public"],
    deps = ["//pkg/urlheap"],
)

go_test(
    name = "processor_test",
    srcs = ["processor_test.go"],
    embed = [":processor"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
